--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "connected-react-router": "^5.0.1",
     "express": "^4.16.4",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
     "node-sass": "^4.10.0",
+    "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
